# yosys

./: .gitmodules  CMakeLists.txt  gen_cmake.py  vcpkg.json
backends/: CMakeLists.txt
backends/aiger/: CMakeLists.txt
backends/blif/: CMakeLists.txt
backends/btor/: CMakeLists.txt
backends/cxxrtl/: CMakeLists.txt
backends/edif/: CMakeLists.txt
backends/firrtl/: CMakeLists.txt
backends/intersynth/: CMakeLists.txt
backends/jny/: CMakeLists.txt
backends/json/: CMakeLists.txt
backends/rtlil/: CMakeLists.txt  Makefile.inc  rtlil_exporter.cc  rtlil_exporter.h
backends/simplec/: CMakeLists.txt
backends/smt2/: CMakeLists.txt
backends/smv/: CMakeLists.txt
backends/spice/: CMakeLists.txt
backends/table/: CMakeLists.txt
backends/verilog/: CMakeLists.txt
cmake/modules/: FindABC.cmake  FindReadline.cmake
frontends/: CMakeLists.txt
frontends/aiger/: CMakeLists.txt
frontends/ast/: CMakeLists.txt
frontends/blif/: CMakeLists.txt
frontends/json/: CMakeLists.txt
frontends/liberty/: CMakeLists.txt
frontends/rpc/: CMakeLists.txt
frontends/rtlil/: CMakeLists.txt
frontends/verific/: CMakeLists.txt
frontends/verilog/: CMakeLists.txt
kernel/: CMakeLists.txt  driver.cc  hashlib.h  log.cc  log.h  register.cc  register.h  yosys.cc  yosys.h  yosys_common.h
libs/: CMakeLists.txt
libs/bigint/: CMakeLists.txt
libs/ezsat/: CMakeLists.txt
libs/fst/: CMakeLists.txt  fstapi.h
libs/json11/: CMakeLists.txt
libs/minisat/: CMakeLists.txt
libs/sha1/: CMakeLists.txt
libs/subcircuit/: CMakeLists.txt
passes/: CMakeLists.txt
passes/cmds/: CMakeLists.txt
passes/equiv/: CMakeLists.txt
passes/fsm/: CMakeLists.txt
passes/hierarchy/: CMakeLists.txt  hierarchy.cc
passes/memory/: CMakeLists.txt
passes/opt/: CMakeLists.txt
passes/pmgen/: CMakeLists.txt
passes/proc/: CMakeLists.txt
passes/sat/: CMakeLists.txt
passes/techmap/: CMakeLists.txt
passes/tests/: CMakeLists.txt
techlibs/: CMakeLists.txt
techlibs/common/: CMakeLists.txt  cellhelp.py
